force-app/main/default/objects/cpm__Installment__c/fields/fdff__GiftTransaction__c.field-meta.xml
<CustomField>
    <fullName>fdff__GiftTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Transaction</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>