force-app/main/default/objects/cpm__Installment__c/fields/gaid__Consider_for_Gift_Aid__c.field-meta.xml
<CustomField>
    <fullName>gaid__Consider_for_Gift_Aid__c</fullName>
    <description>For FinDock performance use only.</description>
    <externalId>true</externalId>
    <inlineHelpText>For FinDock performance use only.</inlineHelpText>
    <label>Consider for Gift Aid</label>
    <length>1</length>
    <type>Text</type>
</CustomField>