force-app/main/default/objects/cpm__Installment__c/fields/gaid__Contact_has_Active_GAD__c.field-meta.xml
<CustomField>
    <fullName>gaid__Contact_has_Active_GAD__c</fullName>
    <formula>IF ( 
AND ( NOT(ISNULL(cpm__Contact__c)), cpm__Contact__r.gaid__Active_Gift_Aid_Declarations__c &gt; 0 ), true, false 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not used.</inlineHelpText>
    <label>Contact has Active GAD (deprecated)</label>
    <type>Checkbox</type>
</CustomField>