force-app/main/default/objects/cpm__Installment__c/fields/gaid__Eligible_for_GiftAid_formula__c.field-meta.xml
<CustomField>
    <fullName>gaid__Eligible_for_GiftAid_formula__c</fullName>
    <description>If the installment is eligible, the checkbox is marked (true).</description>
    <formula>IF ( NOT (ISBLANK(cpm__Contact__c ) ),
    AND(
        NOT( AND (ISBLANK(cpm__Last_Collection_Date__c) ,ISBLANK( cpm__Due_Date__c ))),
        IF ($Setup.gaid__GiftAid_Settings__c.gaid__Advanced_GiftAid_Eligibility_Calculation__c, 
            AND (gaid__Valid_Gift_Aid_Declaration__c != NULL, NOT(gaid__Valid_Gift_Aid_Declaration__r.gaid__In_Cooling_off_Period__c)),
            AND (
                gaid__Contact_has_Active_GAD__c, 
                OR(
                    AND( TEXT(cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Type__c) = &apos;Single&apos; , 
 IF(NOT(ISBLANK(cpm__Last_Collection_Date__c)) , cpm__Last_Collection_Date__c = cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c , cpm__Due_Date__c = cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c)  ),
                    AND( TEXT(cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Type__c) = &apos;Ongoing&apos;, OR( ISBLANK (cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c) , IF( NOT(ISBLANK(cpm__Last_Collection_Date__c)),cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c &lt;= cpm__Last_Collection_Date__c , cpm__Contact__r.gaid__Active_Gift_Aid_Declaration__r.gaid__Start_Date__c &lt;= cpm__Due_Date__c ) ))
                )
            )
        ), 
        NOT(OR ( ISPICKVAL( cpm__Status__c , &apos;Reversed&apos;),ISPICKVAL( cpm__Status__c , &apos;Cancelled&apos;), ISPICKVAL(cpm__Status__c, &apos;Rejected&apos;), ISPICKVAL(cpm__Status__c, &apos;Refunded&apos;) )),
        NOT (gaid__GiftAid_Claimed__c), 
        NOT( gaid__Exclude_from_GiftAid__c), 
        cpm__Amount_Open__c = 0,
        cpm__Amount__c &gt; 0,
        TEXT (cpm__Payment_Method__c ) != &apos;GiftAid&apos;,
        IF(NOT(ISBLANK(cpm__Last_Collection_Date__c)) , DATE( YEAR (  $Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) - 4, MONTH ( $Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) , DAY ($Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) ) &lt;= cpm__Last_Collection_Date__c , DATE( YEAR (  $Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) - 4, MONTH ( $Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) , DAY ($Setup.gaid__Cur_Fiscal_Year__c.gaid__Start_Date__c ) ) &lt;= cpm__Due_Date__c)
    )
,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the installment is eligible, the checkbox is marked (true).</inlineHelpText>
    <label>Eligible for Gift Aid</label>
    <type>Checkbox</type>
</CustomField>