force-app/main/default/objects/cpm__Installment__c/fields/gaid__Exclude_from_GiftAid__c.field-meta.xml
<CustomField>
    <fullName>gaid__Exclude_from_GiftAid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true (checked), this receivable installment is not considered for Gift Aid.</description>
    <inlineHelpText>If true (checked), this receivable installment is not considered for Gift Aid.</inlineHelpText>
    <label>Exclude from Gift Aid</label>
    <type>Checkbox</type>
</CustomField>