force-app/main/default/objects/cpm__Installment__c/fields/gaid__Fiscal_Year_Start__c.field-meta.xml
<CustomField>
    <fullName>gaid__Fiscal_Year_Start__c</fullName>
    <description>The fiscal year start based on Due Date</description>
    <label>Fiscal Year Start</label>
    <type>Date</type>
</CustomField>