force-app/main/default/objects/cpm__Installment__c/fields/gaid__GA_Claim_Total__c.field-meta.xml
<CustomField>
    <fullName>gaid__GA_Claim_Total__c</fullName>
    <description>Calculated by FinDock. Shows the amount of the original donation or the amount of the Gift Aidable field.</description>
    <inlineHelpText>Calculated by FinDock. Shows the amount of the original donation or the amount of the Gift Aidable field.</inlineHelpText>
    <label>GA Claim Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>