force-app/main/default/objects/cpm__Installment__c/fields/gaid__Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>gaid__Gift_Aid_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gift Aid declaration which at the time of generation was proof that this installment was eligible.</description>
    <inlineHelpText>Gift Aid declaration which at the time of generation was proof that this installment was eligible.</inlineHelpText>
    <label>Gift Aid Declaration</label>
    <referenceTo>gaid__Gift_Aid_Declaration__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>