force-app/main/default/objects/cpm__Installment__c/fields/gaid__Gift_Aidable_Amount__c.field-meta.xml
<CustomField>
    <fullName>gaid__Gift_Aidable_Amount__c</fullName>
    <description>If only part of a donation is eligible for Gift Aid, enter the eligible amount here.</description>
    <inlineHelpText>If only part of a donation is eligible for Gift Aid, enter the eligible amount here.</inlineHelpText>
    <label>Gift Aidable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>