force-app/main/default/objects/cpm__Installment__c/fields/gaid__GiftAid_Claimed__c.field-meta.xml
<CustomField>
    <fullName>gaid__GiftAid_Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Gift Aid has been claimed for this installment.</description>
    <inlineHelpText>Indicates if Gift Aid has been claimed for this installment.</inlineHelpText>
    <label>Gift Aid Claimed</label>
    <type>Checkbox</type>
</CustomField>