force-app/main/default/objects/cpm__Installment__c/fields/gaid__Related_Transaction__c.field-meta.xml
<CustomField>
    <fullName>gaid__Related_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Receivable installment that is the basis of the Gift Aid installment.</description>
    <inlineHelpText>Receivable installment that is the basis of the Gift Aid installment.</inlineHelpText>
    <label>Related Transaction</label>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>