force-app/main/default/objects/cpm__Installment__c/fields/gaid__Valid_Gift_Aid_Declaration__c.field-meta.xml
<CustomField>
    <fullName>gaid__Valid_Gift_Aid_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The valid declaration at the receivable installment due date.</description>
    <inlineHelpText>The valid declaration at the receivable installment due date.</inlineHelpText>
    <label>Valid Gift Aid Declaration</label>
    <referenceTo>gaid__Gift_Aid_Declaration__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>InstallmentsWithValidGad</relationshipName>
    <type>Lookup</type>
</CustomField>