force-app/main/default/objects/cpm__Installment__c/fields/Gift_Transaction_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Gift_Transaction_Payment_Method__c</fullName>
    <formula>TEXT( fdff__GiftTransaction__r.PaymentMethod )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Transaction Payment Method</label>
    <type>Text</type>
</CustomField>