force-app/main/default/objects/cpm__Installment__c/fields/Income_Stream__c.field-meta.xml
<CustomField>
    <fullName>Income_Stream__c</fullName>
    <label>Income Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Trust &amp; Grants</fullName>
            </value>
            <value>
                <fullName>Major Donors</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>