force-app/main/default/objects/cpm__Installment__c/fields/Name_of_organisation_group_association__c.field-meta.xml
<CustomField>
    <fullName>Name_of_organisation_group_association__c</fullName>
    <inlineHelpText>Name of organisation, group, association donation was made on behalf of</inlineHelpText>
    <label>Name of organisation, group, association</label>
    <type>TextArea</type>
</CustomField>