force-app/main/default/objects/cpm__Installment__c/fields/Name_of_person_donation_is_in_memory_of__c.field-meta.xml
<CustomField>
    <fullName>Name_of_person_donation_is_in_memory_of__c</fullName>
    <label>Name of person donation is in memory of</label>
    <type>TextArea</type>
</CustomField>