force-app/main/default/objects/cpm__Installment__c/fields/pp4ph__PayPal_Capture_Id__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__PayPal_Capture_Id__c</fullName>
    <description>The PayPal id to relate the actual payment</description>
    <externalId>true</externalId>
    <label>PayPal Capture Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>