force-app/main/default/objects/cpm__Installment__c/fields/pp4ph__PayPal_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>pp4ph__PayPal_Order_Id__c</fullName>
    <description>External ID within PayPal to refer the installment to</description>
    <externalId>true</externalId>
    <label>PayPal Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>