force-app/main/default/objects/cpm__Installment__c/fields/proh__File__c.field-meta.xml
<CustomField>
    <fullName>proh__File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentHub File</label>
    <referenceTo>proh__File__c</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>