force-app/main/default/objects/cpm__Installment__c/fields/Relation_person_donation_is_in_memory_of__c.field-meta.xml
<CustomField>
    <fullName>Relation_person_donation_is_in_memory_of__c</fullName>
    <label>Relation to person donation is in mem of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>