force-app/main/default/objects/cpm__Installment__c/fields/SourceCode__c.field-meta.xml
<CustomField>
    <fullName>SourceCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Code</label>
    <referenceTo>OutreachSourceCode</referenceTo>
    <relationshipLabel>Installments</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>