force-app/main/default/objects/cpm__Installment__c/recordTypes/cpm__Payable.recordType-meta.xml
<RecordType>
    <fullName>cpm__Payable</fullName>
    <active>true</active>
    <label>Payable</label>
</RecordType>