force-app/main/default/objects/cpm__Installment__c/recordTypes/cpm__Receivable.recordType-meta.xml
<RecordType>
    <fullName>cpm__Receivable</fullName>
    <active>true</active>
    <label>Receivable</label>
</RecordType>