force-app/main/default/objects/cpm__Installment__c/recordTypes/gaid__GiftAid.recordType-meta.xml
<RecordType>
    <fullName>gaid__GiftAid</fullName>
    <active>true</active>
    <label>Gift Aid</label>
</RecordType>