force-app/main/default/objects/cpm__Installment__c/validationRules/Account_or_Contact_should_be_selected_KS.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Contact_should_be_selected_KS</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISBLANK(cpm__Account__c), ISBLANK(cpm__Contact__c) , NOT($Setup.KillSwitch__c.Val_Instalment__c) )</errorConditionFormula>
    <errorMessage>An Account or Contact need to be selected</errorMessage>
</ValidationRule>